# Zahav

./: README.md  initialize_database.bat  merge_pdfs.py  nginx-cloudflare-ec2-config.conf  nginx-config-example.conf  start_app.bat  start_zahav.md
.github/workflows/: e2e-tests.yml
app/: .gitignore  GETTING_STARTED.md  README.md  docker-compose.yml
app/backend/: .env.production  Dockerfile  alembic.ini  check_server.py  init_db.py  pyproject.toml
app/backend/app/: __init__.py  main.py
app/backend/app/db/: __init__.py  database.py
app/backend/app/models/: alert.py  booking.py  price.py  user.py
app/backend/app/routes/: alerts.py  auth.py  bookings.py  prices.py  users.py
app/backend/app/utils/: auth.py
app/backend/migrations/: env.py
app/backend/tests/: conftest.py  test_auth.py
app/frontend/: .env.production  Dockerfile  README.md  package-lock.json  package.json  playwright.config.js
app/frontend/public/: index.html  manifest.json
app/frontend/src/: App.js  config.js  index.js
app/frontend/src/context/: AuthContext.js  BookingContext.js
app/frontend/src/docs/: AI_FEATURES.md  CHARTS.md
app/frontend/tests/: README.md  global-setup.js
development/: state.md
docs/: README.md
docs/api/: overview.md
docs/architecture/: overview.md
docs/guides/: user-guide.md
docs/tutorials/: creating-price-alerts.md
labs/: copy_code.py
pitch/: founding-hypothesis.md  index.html  project_summary.md
pitch/assets/: ai_architecture.md  ai_features_flow.md  app_flow.md
pitch/src/: custom.css  style.css  style.js
technical/: architecture.md
(+56 files in other folders)
